# ai-media-transcriber

./: README.md  pyproject.toml
src/ai_media_transcriber/: config.py  ffmpeg_processor.py  file_detector.py  file_utils.py  formatters.py  image_processor.py  logger.py  main.py  openai_client.py  pipeline.py  types.py
