[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-media-transcriber"
version = "0.1.0"
description = "A sample Python CLI tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.24.1",
    "openai>=1.3.0",
    "ffmpeg-python>=0.2.0",
    "pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
amt = "ai_media_transcriber.main:main"

[tool.setuptools.packages.find]
where = ["src"]
